<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>learn.agent</groupId>
        <artifactId>agent-java-learning</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>context-engineering</artifactId>

    <!--
      阶段 9：上下文工程。会话计划、子 Agent、产物落盘与压缩、文件记忆、动态 Prompt。
      依赖 agent-guardrails：本阶段的提醒注入复用阶段 8 的 Hook 扩展点，
      不再新写第四个循环骨架。
    -->

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.8.2</junit.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>learn.agent</groupId>
            <artifactId>llm-client</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>learn.agent</groupId>
            <artifactId>structured-output</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>learn.agent</groupId>
            <artifactId>tool-calling</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>learn.agent</groupId>
            <artifactId>agent-loop</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>learn.agent</groupId>
            <artifactId>agent-guardrails</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.15.4</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
            </plugin>
            <!-- package 时复制运行依赖，方便直接执行本课 main 方法。 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>copy-runtime-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/dependency</outputDirectory>
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
